# mecalin

./: .ai-context.md  .gitignore  Cargo.toml  README.md  io.github.nacho.mecalin-devel.yml  meson.build
.kiro/: context.md
data/: gschemas.compiled  io.github.nacho.mecalin.desktop.in  io.github.nacho.mecalin.gschema.xml  io.github.nacho.mecalin.metainfo.xml  meson.build  org.gnome.mecalin.desktop.in  org.gnome.mecalin.gschema.xml  resources.gresource.xml
data/icons/: meson.build
data/keyboard_layouts/: es.json  us.json
data/lessons/: es.json  us.json
data/ui/: window.ui
po/: POTFILES.in  es.po  it.po  mecalin.pot
resources/: resources.gresource.xml
resources/ui/: falling_keys_game.ui  lesson_view.ui  main_action_list.ui  scrolling_lanes_game.ui  study_room.ui  target_text_view.ui  text_view.ui  window.ui
src/: application.rs  config.rs  config.rs.in  course.rs  falling_keys_game.rs  keyboard_widget.rs  lesson_view.rs  main.rs  main_action_list.rs  scrolling_lanes_game.rs  study_room.rs  target_text_view.rs  text_view.rs  utils.rs  window.rs
