[package]
name = "mecalin"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
libadwaita = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
gio = "0.20"
glib = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
i18n-format = "0.3"

[build-dependencies]
glib-build-tools = "0.20"
