icondir = get_option('datadir') / 'icons' / 'hicolor'
symbolicdir = icondir / 'symbolic' / 'apps'
scalabledir = icondir / 'scalable' / 'apps'

install_data(
  'io.github.nacho.mecalin.svg',
  install_dir: scalabledir,
)

install_data(
  'io.github.nacho.mecalin-symbolic.svg',
  install_dir: symbolicdir,
)
